--- a/assets/style.css
+++ b/assets/style.css
@@ -1,131 +1,120 @@
-#wrapper{
-    width:100%;
-    height:100%;
-    position: relative;
+*{
+    box-sizing: border-box;
 }
 
-#wrapper+div{
-    display: inline;
-    position: relative;
-    width:100%;
-}
 
-div{
-    display:block;
-}
-
-#menu{
-    cursor: pointer;
-    position: absolute;
-    right:0;
-    width: 177px;
-    height:30px;
-    padding:10px 30px 0px 30px;
-    display:flex;
+/* 메뉴바 */
+.menu{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
     align-items: center;
+    margin-top:20px;
 }
 
-#box1{
-    font-size:13px;
-    display: flex;
-    width:87.953px;
-    padding-right: 15px;
-    justify-content: space-between;
+.item{
+    cursor: pointer;
 }
 
-#item1{
-    height:24px;
+.item1{
+    margin-right: 18px;
 }
 
-#item2{
-    height:24px;
+.item2{
+    margin-right: 18px;
 }
 
-#box2{
-    display: flex;
-    width:75px;
-    justify-content: space-between;
+.item3{
+    margin-right: 18px;
 }
-
-#shape1{
-    justify-content: space-around;
-    align-content: space-around;
-    flex-wrap: wrap;
-    display:flex;
-    width:30px;
-    height:30px;
-}
-
-.dot{
-    width:8px;
-    height:8px;
-    background: gray;
-}
-
-#shape2{
-    font-size: larger;
-    font-weight: bolder;
-    text-align: center;
-    background-origin: content-box;
-    color:white;
+.item4{
+    margin-right: 18px;
     background: brown;
+    height:40px;
+    width:40px;
+    color:white;
     border-radius: 100%;
-    width:30px;
-    height:30px;
+    margin-top: 6px;
 }
 
-#content{
-    position: absolute;
-    top:100px;
-    height: 233px;
-    margin-top: 89px;
-    width:100%;
+.item4 span{
+    font-weight: 700;
+    font-size: 18px;
+    display: block;
+    text-align: center;
+    margin-top:6px;
+    
+}
+
+/*메인*/
+
+.main{
     text-align: center;
 }
 
-#word1{
-    font-size: 110px;
-    color:rgb(56, 63, 170);
+/*로고*/
+
+.logo{
+    margin-top: 190px;
+    font-size: 130px;
+    font-weight: bold;
 }
 
-#word2{
-    font-size: 110px;
-    color:rgb(168, 41, 41);
+.logo span:nth-child(1){
+    color:#4285f4;
 }
 
-#word3{
-    color:rgb(197, 190, 84);
-    font-size: 110px;
+.logo span:nth-child(2){
+    color:#ea4335;
 }
 
-#word4{
-    color:rgb(56, 63, 170);
-    font-size: 110px;
+.logo span:nth-child(3){
+    color:#fbbc05;
 }
 
-#word5{
-    color:rgb(68, 180, 111);
-    font-size: 110px;
+.logo span:nth-child(4){
+    color:#4285f4;
 }
 
-#word6{
-    font-size: 110px;
-    color:rgb(168, 41, 41);
+.logo span:nth-child(5){
+    color:#34a853;
 }
 
-#search{
-   padding: 0px 0px 60px 0px;
-   margin: 0 auto;
-   width: auto;
-   max-width: 484px;
-   height: 35px;
-}
-#serc{
-    vertical-align: middle;
-    border:1px solid gray;
-    border-radius: 10em;
-    width:400px;
-    height:30px;
-    margin:50px 0;
+.logo span:nth-child(6){
+    color:#ea4335;
 }
 
+/*검색창*/
+
+.search{
+    width: 500px;
+    height: 38px;
+    border:5px solid gray;
+    margin:auto;
+    border-radius: 20px;
+}
+
+#searchbar{
+    border-color: white;
+    
+}
+
+/*기타*/
+
+.etc1, .etc2{
+    display: inline-block;
+    margin: 10px 10px;
+    height:40px;
+    padding:5px 10px;
+    background: rgba(0 ,0,0, 0.2);
+    cursor: pointer;
+}
+
+.info{
+    margin: 10px auto;
+    width:200px;
+    height:40px;
+    padding:5px 10px;
+    background: rgba(0 ,0,0, 0.2);
+}
